修正しました

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <body>
 	<p>Let's team develop</p>
+	<li><a href="https://www.youtube.com/channel/UCs8nP5mUR3pwJmgixsul8Hw">おすすめページ</a></li>
 </body>
 </html>
 
